# champion_prophet

./: .gitignore  README.md  champion.md  pyproject.toml
database/: README.md  email_database.json
docs/: architecture.md  baselines.md  environment.md  phase1.md  plan.md  prophet_daily_baseline.md  prophet_phase2.md
docs/analysis/: data_qa_report.md
scripts/: data_qa.py  run_prophet_daily.py  run_prophet_phase2.py
src/champion_prophet/: __init__.py  config.py
src/data/: __init__.py  daily_loader.py
src/evaluation/: __init__.py  calibration.py  cross_validation.py  metrics.py  plots.py
src/models/: __init__.py  prophet_daily.py
tests/: test_daily_loader.py  test_metrics.py
